services/payment/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goodfood-payment
spec:
  selector:
    app: goodfood-payment
  ports:
    - name: "grpc"
      port: 50003
      targetPort: 50003
    - name: "webook"
      port: 4242
      targetPort: 4242
status:
  loadBalancer: {}
